--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">CameraChipmonk</string>
 
     <string name="camera_permission_rationale">Since this is a camera app, we need permission to use the camera.</string>
+    <string name="camera_permission_not_granted">This needs you to grant permission to use the camera in order to work.</string>
     <string name="btn_shoot">Shoot</string>
 
+    <string name="error_invalid_size">Could not find or choose an appropriate size from the selected camera.</string>
+    <string name="error_no_access_to_camera">Could not access selected camera.</string>
 
 </resources>
